public/styles/chat.css
.page.-chat {
	padding: 0;
	display: flex;
	flex-direction: column;
	position: relative;
	height: calc(100vh - var(--header-height));
}

.messages {
	padding: 0 24px;
	flex: 1;
	position: relative;
}

.messages.-scroll {
	overflow-y: scroll;
}

.messages:not(.-scroll) .message-groups {
	width: calc(100% - 48px);
	position: absolute;
	bottom: 0;
}

.message-groups {
	width: 100%;
	padding: 24px 0;
}

.message-group {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
}

.message-group + .message-group {
	margin-top: 12px;
}

.message-group.-user {
	margin-left: auto;
	align-items: flex-end;
}

.message-author {
	display: block;
	color: var(--color-content);
	font-size: 0.825em;
	font-weight: 500;
	margin-bottom: 2px;
}

.message {
	max-width: 80%;
	padding: 8px 12px;
	background: var(--silver);
	color: var(--color-content);
	font-size: 0.875em;
	font-weight: 500;
	line-height: 1.25;
	margin-bottom: 2px;
	border-radius: 8px;
	border-top-left-radius: 0;
	position: relative;
	word-break: break-word;
}

.message .icon.-like {
	color: var(--silver);
	/* display: none; */
	position: absolute;
	left: 100%;
	top: 0;
	margin: 4px 8px;
}

.message::before {
	content: "";
	display: block;
	position: absolute;
	top: 0;
	right: 100%;
	border: 8px solid transparent;
	border-top-color: var(--silver);
	border-right-color: var(--silver);
}

.message-group.-user .message {
	background: var(--blue);
	color: white;
	border-radius: 8px;
	border-bottom-right-radius: 0;
}

.message-group.-user .message::before {
	right: auto;
	left: 100%;
	top: auto;
	bottom: 0;
	border-color: transparent;
	border-left-color: var(--blue);
	border-bottom-color: var(--blue);
}

.message-group.-user .icon.-like {
	left: auto;
	right: 100%;
}

.message-bar {
	display: flex;
	margin: 8px;
	padding: 4px;
	border-radius: 20px;
	background: var(--color-input);
	border: thin solid var(--color-outline);
	transition: 0.125s border-color;
}

.message-bar:focus-within {
	background: white;
	border-color: var(--blue);
}

.message-input {
	flex: 1;
	padding: 8px 16px;
	border: none;
	outline: none;
	background: none;
	font-size: 14px;
	color: var(--color-content);
}

.message-input::placeholder {
	color: var(--color-content);
	transition: 0.125s color;
}

.message-input:focus::placeholder {
	color: var(--blue);
}

.message-send {
	background: var(--blue);
	color: white;
	width: 32px;
	height: 32px;
	outline: none;
	border: none;
	border-radius: 50%;
	text-align: center;
	transition: 0.125s background;
}

.message-input:placeholder-shown + .message-send {
	background: var(--color-outline);
}

.message-input:not(:placeholder-shown) + .message-send:hover {
	background: var(--blue-dark);
}

